<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_mileage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MileageFragment"
    android:layout_centerHorizontal="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:scrollbars="vertical">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text=""/>

    <EditText
        android:id="@+id/editMileageDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_below="@id/title"
        android:hint="@string/date"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:layout_marginLeft="@dimen/edit_text_margin_horizontal"
        android:layout_marginRight="@dimen/edit_text_margin_horizontal"
        android:ellipsize="start"
        android:gravity="center"
        android:background="@drawable/text_view_border"
        android:layout_marginTop="@dimen/row_margin_vertical"
        android:layout_marginBottom="@dimen/row_margin_vertical"/>

    <LinearLayout
        android:id="@+id/heading_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editMileageDate"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startMiles"
            android:layout_marginLeft="@dimen/text_view_margin_horizontal"
            android:layout_marginRight="@dimen/text_view_margin_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/endMiles"
            android:layout_marginLeft="@dimen/text_view_margin_horizontal"
            android:layout_marginRight="@dimen/text_view_margin_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_one"
        android:layout_marginBottom="@dimen/row_margin_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/editStartMiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:layout_weight="1"
            android:hint="@string/startHint"
            android:background="@drawable/text_view_border"
            android:nextFocusDown="@+id/editEndMiles"
            android:layout_marginLeft="@dimen/text_view_margin_horizontal"
            android:layout_marginRight="@dimen/text_view_margin_horizontal"/>

        <EditText
            android:id="@+id/editEndMiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:layout_weight="1"
            android:hint="@string/endHint"
            android:background="@drawable/text_view_border"
            android:layout_marginLeft="@dimen/text_view_margin_horizontal"
            android:layout_marginRight="@dimen/text_view_margin_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/heading_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_one"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fuelBought"
            android:layout_marginLeft="@dimen/text_view_margin_horizontal"
            android:layout_marginRight="@dimen/text_view_margin_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/priceUnit"
            android:layout_marginLeft="@dimen/text_view_margin_horizontal"
            android:layout_marginRight="@dimen/text_view_margin_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_two"
        android:layout_marginBottom="@dimen/row_margin_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <EditText
            android:id="@+id/editFuelBought"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:hint="@string/fuelHint"
            android:background="@drawable/text_view_border"
            android:layout_marginLeft="@dimen/text_view_margin_horizontal"
            android:layout_marginRight="@dimen/text_view_margin_horizontal"/>

        <EditText
            android:id="@+id/editPriceUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/priceHint"
            android:background="@drawable/text_view_border"
            android:nextFocusDown="@id/editStartMiles"
            android:layout_marginStart="@dimen/text_view_margin_horizontal"
            android:layout_marginLeft="@dimen/text_view_margin_horizontal"
            android:layout_marginRight="@dimen/text_view_margin_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_two"
        android:layout_marginTop="@dimen/row_margin_vertical"
        android:layout_marginBottom="@dimen/row_margin_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <TextView
            android:id="@+id/textMileage"
            android:text="@string/mileageLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:layout_weight="1"
            android:paddingStart="@dimen/text_view_padding_horizontal"
            android:paddingLeft="@dimen/text_view_padding_horizontal"
            android:paddingEnd="@dimen/text_view_padding_horizontal"
            android:paddingRight="@dimen/text_view_padding_horizontal"/>
            <!--android:background="@drawable/text_view_border"/-->

        <TextView
            android:id="@+id/textMileageValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/mileageValue"/>

        <TextView
            android:id="@+id/textUnits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="start"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/mpl"/>

        <ToggleButton
            android:id="@+id/toggleUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_minus_medium"
            android:textOff="@string/unitOff"
            android:textOn="@string/unitOn"
            android:background="@drawable/text_view_border"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_three"
        android:layout_marginTop="@dimen/row_margin_vertical"
        android:layout_marginBottom="@dimen/row_margin_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="visible">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            />
        <Button
            android:id="@+id/button_commit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/commit"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_four"
        android:layout_marginTop="@dimen/row_margin_vertical"
        android:layout_marginBottom="@dimen/row_margin_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />
        <Button
            android:id="@+id/button_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            />
        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@color/red"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/row_five"
        android:minHeight="400dp">
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/mileage_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</RelativeLayout>
