<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delivery_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp">
    <!-- Add new delivery -->
    <LinearLayout
        android:id="@+id/row_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:background="@drawable/text_view_border"
        style="@style/list_spacing">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/deliveries"/>
        <Spinner
            android:id="@+id/spinDeliveryDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="date"
            android:hint="@string/date"
            android:ellipsize="start"
            android:gravity="center"/>
    </LinearLayout>
    <!-- Insert new delivery column -->
    <LinearLayout
        android:id="@+id/row_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_date"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        style="@style/list_spacing">
        <TextView
            android:text="@string/NumHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:tag="@string/NumHeading"/>
        <EditText
            android:id="@+id/delivery_list_new_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="@dimen/text_size_small"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:tag="Num Edit"
            />
        <TextView
            android:text="@string/PriceHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:tag="@string/PriceHeading"/>
        <EditText
            android:id="@+id/delivery_list_new_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_small"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:tag="Price edit"/>
        <TextView
            android:text="@string/TipHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:tag="@string/TipHeading"
            />
        <EditText
            android:id="@+id/delivery_list_new_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_small"
            android:maxLines="1"
            android:tag="tip edit"/>
        <TextView
            android:text="@string/ExtraHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"
            android:tag="@string/ExtraHeading"
            />
        <EditText
            android:id="@+id/delivery_list_new_extra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:textSize="@dimen/text_size_small"
            android:maxLines="1"
            android:nextFocusDown="@id/delivery_list_new_num"
            android:tag="local edit"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/delivery_list_item_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_view_margin_horizontal"
            android:cropToPadding="true"
            android:src="@drawable/ic_add_box_black_24dp"
            android:tint="@color/mileage_green"
            android:layout_gravity="bottom"
            android:padding="@dimen/text_view_margin_horizontal"
            android:tag="button"
            />
    </LinearLayout>
    <!--RecyclerView column headings-->
    <LinearLayout
        android:id="@+id/row_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_new"
        android:paddingBottom="@dimen/text_view_padding_horizontal"
        android:orientation="horizontal"
        android:background="@drawable/text_view_border"
        style="@style/list_spacing">

        <TextView
            android:id="@+id/delivery_list_item_num_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/NumHeading"/>
        <TextView
            android:id="@+id/delivery_list_item_price_heading"
            android:text="@string/PriceHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/delivery_list_item_tip_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/TipHeading"/>
        <TextView
            android:id="@+id/delivery_list_item_extra_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ExtraHeading"
            />

    </LinearLayout>
    <!--RecyclerView list of deliveries with LinearLayout wrapper-->
    <LinearLayout
        android:id="@+id/recycler_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_heading"
        android:layout_above="@+id/TableLayout_Totals">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
    <!--TableLayout of total sales, wages etc-->
    <TableLayout
        android:id="@+id/TableLayout_Totals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:paddingBottom="@dimen/text_view_padding_horizontal"
        android:layout_alignParentBottom="true"
        android:background="@drawable/text_view_border_green"
        style="@style/list_spacing">
        <TableRow>
            <TextView
                android:id="@+id/PriceHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PriceHeading"/>
            <TextView
                android:id="@+id/TipHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TipHeading"/>
            <TextView
                android:id="@+id/WageHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WageHeading"/>
            <TextView
                android:id="@+id/ShopHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ShopHeading"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/delivery_list_item_price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalPrice"/>
            <TextView
                android:id="@+id/delivery_list_item_tip_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalTip"/>
            <TextView
                android:id="@+id/delivery_list_item_wage_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalWage"/>
            <TextView
                android:id="@+id/delivery_list_item_shop_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalShop"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>



